Complete other translates

--- a/app/views/admin/nodes/index.html.erb
+++ b/app/views/admin/nodes/index.html.erb
@@ -3,15 +3,15 @@
 <% end %>
 
 <div class="toolbar">
-  <%= link_to '新建节点', new_admin_node_path, class: "btn btn-default" %>
+  <%= link_to t("admin.nodes.new"), new_admin_node_path, class: "btn btn-default" %>
 </div>
 
 <table class="table table-bordered table-striped table-condensed">
   <tr class="head">
     <td class="first">#</td>
-    <td>名称</td>
-    <td>排序</td>
-    <td>帖子数量</td>
+    <td>Name</td>
+    <td>Order</td>
+    <td>Topics Count</td>
     <td></td>
   </tr>
 
