--- a/app/views/errors/404.html.erb
+++ b/app/views/errors/404.html.erb
@@ -2,7 +2,7 @@
   <div class="card-body" style="text-align: center;">
     <h1>404 not found</h1>
     <p>
-      Sorry, Page not found
+      Sorry, Page not found.
     </p>
   </div>
 </div>
