--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -1,6 +1,7 @@
 <% title_tag t("teams.new_team") %>
 
 <div class="row">
+  <div class="col-sm-2"></div>
   <div class="col-sm-8">
     <div class="card card-lg">
       <div class="card-body">
@@ -38,16 +39,5 @@
 
       </div>
     </div>
+    <div class="col-sm-2"></div>
   </div>
-  <div class="col-sm-4">
-    <div class="card">
-      <div class="card-header"><%= t('teams.teams')%></div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">公司／组织品牌展示；</li>
-        <li class="list-group-item">独立的组织首页；</li>
-        <li class="list-group-item">汇集成员在社区里面的话题；</li>
-        <li class="list-group-item">为团队招揽人才；</li>
-      </ul>
-    </div>
-  </div>
-</div>
