--- a/app/views/topics/_reply_form.html.erb
+++ b/app/views/topics/_reply_form.html.erb
@@ -7,8 +7,8 @@
   <%= f.hidden_field :reply_to_id %>
   <div class="submit-buttons">
     <button type="submit" id="reply-button" class="btn btn-primary" tabindex="2", data-disable-with='<%= t("topics.submit_reply") %>'><%= t("topics.submit_reply")%></button>
-    <span class="help-inline" style="padding-left: 5px;" title="或者 Ctrl + Enter"><kbd>Command</kbd> + <kbd>Enter</kbd></span>
+    <span class="help-inline" style="padding-left: 5px;" title="Ctrl + Enter"><kbd>Command</kbd> + <kbd>Enter</kbd></span>
 
-    <div class="pull-right"><a href="/markdown" target="_blank">排版说明</a></div>
+    <div class="pull-right"><a href="/markdown" target="_blank"><%= t("topics.form.markdown_guides") %></a></div>
   </div>
 <% end %>
