--- a/app/views/topics/_topic_sidebar.html.erb
+++ b/app/views/topics/_topic_sidebar.html.erb
@@ -37,6 +37,6 @@
     </div>
   </div>
   <div class="notify-updated">
-    <a class="update" href="#"><i class="fa fa-bell-o"></i> <b>有新回复！</b>点击这里立即载入</a>
+    <a class="update" href="#"><i class="fa fa-bell-o"></i> <%= t("topics.new_reply_received_html") %></a>
   </div>
 </div>
