--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,13 +1,13 @@
 <% content_for :sitemap do %>
-  <span class="current">用户</span>
+  <span class="current"><%= t("admin.menu.users") %></span>
 <% end %>
 <div class="toolbar">
   <form class="form-inline" action="<%= admin_users_path %>">
     <div class="form-group mr-sm-2">
-      <%= select_tag(:field, options_for_select([['用户名','login'], ['Email','email'], ['姓名','name']], params[:field]), class: 'form-control') %>
+      <%= select_tag(:field, options_for_select([['Username','login'], ['Email','email'], ['Name','name']], params[:field]), class: 'form-control') %>
     </div>
     <div class="form-group mr-sm-2">
-      <input type="text" name="q" class="form-control" value="<%= params[:q] %>" placeholder="搜索" />
+      <input type="text" name="q" class="form-control" value="<%= params[:q] %>" placeholder="Search" />
     </div>
     <div class="form-group mr-sm-2">
       <%= select_tag(:type, options_for_select([['All',''], ['Team','Team']], params[:type]), class: 'form-control') %>
