--- a/app/views/home/markdown.html.erb
+++ b/app/views/home/markdown.html.erb
@@ -4,7 +4,7 @@
 
 <div class="card">
   <div class="card-body">
-    <h1>Markdown 教程</h1>
+    <h1>Markdown Guides</h1>
     <div class="row">
       <div class="col-md-6">
         <pre><code><%= Homeland::Markdown.example(I18n.locale) %></code></pre>
