--- a/app/views/shared/_comments.html.erb
+++ b/app/views/shared/_comments.html.erb
@@ -4,7 +4,7 @@ new_comment = Comment.new(commentable_type: commentable.class.name, commentable_
 %>
 
 <div id="<%= commentable.class.name %>_<%= commentable.id %>_cell_comments" class="comments card">
-  <div class="card-header">评论列表</div>
+  <div class="card-header"><%= t("common.comments") %></div>
   <div class="card-body">
     <% if !comments.blank? %>
     <%= render :partial => "/shared/comment", :collection => comments %>
@@ -16,7 +16,7 @@ new_comment = Comment.new(commentable_type: commentable.class.name, commentable_
 
 <% if @current_user %>
   <div id="<%= commentable.class.name %>_<%= commentable.id %>_cell_new_comment" class="cell_comments_new card">
-    <div class="card-header">发表新评论</div>
+    <div class="card-header"><%= t("common.new_comment") %></div>
     <%= form_for(new_comment, remote: true, html: { class: "card-body" }) do |f| %>
       <%= f.hidden_field :commentable_type %>
       <%= f.hidden_field :commentable_id %>
