--- a/app/views/shared/_usernav.html.erb
+++ b/app/views/shared/_usernav.html.erb
@@ -5,7 +5,7 @@
   badge_class = "new" if unread_notify_count > 0
   %>
     <li class="nav-item notification-count">
-      <a href="<%= main_app.notifications_path %>" class="nav-link <%= badge_class %>" title="通知"><i class="fa fa-bell"></i><span class="count"><%= unread_notify_count %></span></a>
+      <a href="<%= main_app.notifications_path %>" class="nav-link <%= badge_class %>" title="<%= t("common.notifications") %>"><i class="fa fa-bell"></i><span class="count"><%= unread_notify_count %></span></a>
     </li>
     <li class="nav-item dropdown">
       <a href="#" id="navbar-new-menu" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
