--- a/app/javascript/homeland/index.scss
+++ b/app/javascript/homeland/index.scss
@@ -6,11 +6,16 @@
 @import "./markdown.scss";
 
 @import "bootstrap-select/dist/css/bootstrap-select.min";
+
 .bootstrap-select {
   .dropdown-toggle {
     border: 1px solid var(--form-control-border-color);
     border-radius: 3px;
     outline: 0 !important;
+  }
+
+  @media (max-width: 480px) {
+    width: 100px !important;
   }
 }
 
