--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -26,7 +26,7 @@
   <% end %>
 
   <div class="form-actions hide-ios">
-    <%= f.submit t("common.create"), class: "btn btn-primary", style: "min-width: 200px", 'data-disable-with' => t("common.saving"), 'data-tb' => "save-topic" %>
+    <%= f.submit t("common.publish"), class: "btn btn-primary", style: "min-width: 200px", 'data-disable-with' => t("common.saving"), 'data-tb' => "save-topic" %>
 
     <div class="pull-right hide-ios"><a href="/markdown" target="_blank"><i class="fa fa-life-ring"></i> <%= t("topics.form.markdown_guides") %></a></div>
   </div>
