--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -60,7 +60,7 @@
       <% else %>
         <div id="reply" class="card">
           <div class="card-body">
-            <div class="card-title hide-ios"><%= t("topcs.reply") %></div>
+            <div class="card-title hide-ios"><%= t("topics.reply") %></div>
             <% if can? :create, Reply %>
               <%= render 'reply_form' %>
             <% else %>
