--- a/app/views/admin/dashboards/index.html.erb
+++ b/app/views/admin/dashboards/index.html.erb
@@ -33,7 +33,7 @@
         <div class="total">0</div>
         <div class="name">
           <%= t("admin.dashboard.users_count") %>
-          <span class="total-week" rel="twipsy" title="Weely">+0</span>
+          <span class="total-week" rel="twipsy" title="Weekly">+0</span>
           <span class="total-month" rel="twipsy" title="Monthly">+0</span>
         </div>
       </div>
@@ -43,7 +43,7 @@
         <div class="total">0</div>
         <div class="name">
           <%= t("admin.dashboard.topics_count") %>
-          <span class="total-week" rel="twipsy" title="Weely">+0</span>
+          <span class="total-week" rel="twipsy" title="Weekly">+0</span>
           <span class="total-month" rel="twipsy" title="Monthly">+0</span>
         </div>
       </div>
@@ -53,7 +53,7 @@
         <div class="total">0</div>
         <div class="name">
           <%= t("admin.dashboard.replies_count") %>
-          <span class="total-week" rel="twipsy" title="Weely">+0</span>
+          <span class="total-week" rel="twipsy" title="Weekly">+0</span>
           <span class="total-month" rel="twipsy" title="Monthly">+0</span>
         </div>
       </div>
@@ -65,7 +65,7 @@
         <div class="total">0</div>
         <div class="name">
           <%= t("admin.dashboard.notifications_count") %>
-          <span class="total-week" rel="twipsy" title="Weely">+0</span>
+          <span class="total-week" rel="twipsy" title="Weekly">+0</span>
           <span class="total-month" rel="twipsy" title="Monthly">+0</span>
         </div>
       </div>
@@ -75,7 +75,7 @@
         <div class="total">0</div>
         <div class="name">
           <%= t("admin.dashboard.comments_count") %>
-          <span class="total-week" rel="twipsy" title="Weely">+0</span>
+          <span class="total-week" rel="twipsy" title="Weekly">+0</span>
           <span class="total-month" rel="twipsy" title="Monthly">+0</span>
         </div>
       </div>
@@ -85,7 +85,7 @@
         <div class="total">0</div>
         <div class="name">
           <%= t("admin.dashboard.photos_count") %>
-          <span class="total-week" rel="twipsy" title="Weely">+0</span>
+          <span class="total-week" rel="twipsy" title="Weekly">+0</span>
           <span class="total-month" rel="twipsy" title="Monthly">+0</span>
         </div>
       </div>
