--- a/app/views/topics/_node_info.html.erb
+++ b/app/views/topics/_node_info.html.erb
@@ -4,7 +4,7 @@
       <% if !node.blank? %>
         <div class="title">
           <%= node.name %>
-          <span class="total"><%= t("topics.total_topics_html", count: node.topics_count) %>
+          <span class="total"><%= t("topics.total_topics_html", count: node.topics_count) %></span>
           <div class="pull-right">
             <% if node.collapse_summary? %>
               <a class="btn btn-sm btn-default" data-toggle="collapse" href="#node-summary"><i class="fa fa-lightbulb-o"></i></a>
