--- a/app/javascript/homeland/dark-mode.scss
+++ b/app/javascript/homeland/dark-mode.scss
@@ -11,7 +11,7 @@
   --link-color: #eeeeeebd;
   --red: #a0051d;
   --red-light: #fdf1ed10;
-  --yellow: #fee209aa;
+  --yellow: #fee209;
   --yellow-light: #fffdee10;
   --blue: #2275daaa;
   --blue-light: #e6f0fb10;
