--- a/app/javascript/homeland/_vars.scss
+++ b/app/javascript/homeland/_vars.scss
@@ -1,5 +1,5 @@
 $red: #eb5424;
-$blue: #2275da;
+$blue: #225eda;
 $green: #19a302;
 $yellow: #fee209;
 
@@ -17,7 +17,7 @@ $yellow: #fee209;
   --red-light: #fdf1ed;
   --yellow: #fee209;
   --yellow-light: #fffdee;
-  --blue: #2275da;
+  --blue: #225eda;
   --blue-light: #e6f0fb;
   --green: #19a302;
   --green-light: #f4fff2;
@@ -28,23 +28,27 @@ $yellow: #fee209;
   --filter-active-color: #202020;
 
   // speical vars
-  --btn-default-text-color: #5f5f5f;
-  --btn-default-background-color: #f3f3f3;
-  --btn-default-border-color: #cad0d8;
-  --btn-default-active-background-color: #e0e0e0;
-  --btn-default-active-border-color: #c0c0c0;
-  --btn-default-active-text-color: #aaa;
-  --btn-default-hover-background-color: #f3f3f388;
-  --btn-default-hover-border-color: #73739038;
+  --btn-border-radius: 0.375rem;
+  --btn-box-shaodw: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  --btn-default-text-color: rgba(55, 65, 81, 1);
+  --btn-default-background-color: #fff;
+  --btn-default-border-color: rgba(209, 213, 219, 1);
+  --btn-default-active-background-color: #fff;
+  --btn-default-active-border-color: rgba(209, 213, 219, 1);
+  --btn-default-active-text-color: rgba(55, 65, 81, 1);
+  --btn-default-hover-background-color: rgba(249, 250, 251, 1);
+  --btn-default-hover-border-color: rgba(209, 213, 219, 1);
 
   --form-control-background-color: #fff;
-  --form-control-border-color: #ced4da;
+  --form-control-border-color: rgba(209, 213, 219, 1);
+  --form-control-focus-border-color: rgba(99, 102, 241, 1);
+  --form-control-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   --form-control-disabled-background-color: #e9ecef;
 
-  --input-group-background-color: #e9ecef;
-  --input-group-border-color: #e2e6eb;
+  --input-group-background-color: rgba(249, 250, 251);
+  --input-group-border-color: rgba(209, 213, 219);
 
-  --body-background-color: #f6f7fa;
+  --body-background-color: #f5f6f9;
 
   --navbar-background-color: #fff;
   --navbar-text-color: #404040;
@@ -63,16 +67,21 @@ $yellow: #fee209;
   --sub-navbar-background-color: #fff;
   --sub-navbar-shadow-color: rgba(0, 0, 0, 0.02);
 
+  --card-box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.04),
+    0 1px 2px 0 rgba(0, 0, 0, 0.03);
   --card-border-color: hsla(210, 8%, 51%, 0.09);
   --card-background-color: #fff;
   --card-title-secondary-color: #777;
 
   --dropdown-menu-background-color: #fff;
-  --dropdown-menu-border-color: rgba(0, 0, 0, 0.15);
+  --dropdown-menu-border-color: #e5e7eb;
+  --dropdown-menu-box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
 
+  --dropdown-menu-text-color: rgba(55, 65, 81, 1);
   --dropdown-item-active-text-color: #222;
-  --dropdown-menu-divider-color: #e9ecef;
-  --dropdown-item-active-background-color: rgba(0, 0, 0, 0.05);
+  --dropdown-menu-divider-color: rgba(243, 244, 246, 1);
+  --dropdown-item-active-background-color: rgba(243, 244, 246, 1);
 
   --modal-background-color: #fff;
   --modal-shadow-color: rgba(0, 0, 0, 0.07);
