Fix darkmode menu style

--- a/app/javascript/homeland/dark-mode.scss
+++ b/app/javascript/homeland/dark-mode.scss
@@ -58,9 +58,10 @@
   --card-background-color: #dcdcff0f;
   --card-title-secondary-color: #777;
 
-  --dropdown-menu-background-color: #1d1d1f;
+  --dropdown-menu-background-color: #0f0f10;
+  --dropdown-menu-border-color: rgb(41 42 47);
   --dropdown-menu-text-color: #a9a9a9a8;
-  --dropdown-menu-divider-color: #32323299;
+  --dropdown-menu-divider-color: rgb(41 42 47);
 
   --dropdown-item-active-background-color: rgba(200, 200, 200, 0.1);
   --dropdown-item-active-text-color: #fff;
