Improve TOC style

--- a/app/javascript/homeland/_vars.scss
+++ b/app/javascript/homeland/_vars.scss
@@ -97,9 +97,9 @@ $yellow: #fee209;
   --label-awesome-link-color: #adaaa8;
 
   --opts-text-color: #666;
-  --opts-link-color: #898989;
-  --opts-link-hover-background-color: #eee;
-  --opts-active-icon-color: #222;
+  --opts-link-color: #808080;
+  --opts-link-hover-background-color: #f0f0f0;
+  --opts-active-icon-color: #111;
 
   --scrollbar-thumb-color: rgb(41, 36, 36);
   --scrollbar-track-color: #e5e5e5;
