BREAKING CHANGES: Upgrade profile.contacts, profile.rewards as JSON type store.
This changes will auto convert old YAML value into JSON value in migration.

--- a/app/views/users/_reward.html.erb
+++ b/app/views/users/_reward.html.erb
@@ -12,7 +12,9 @@
         <div class="reward-images">
           <% if @user.rewards %>
             <% @user.rewards.each_with_index do |(field, val), idx| %>
-              <div class="reward-image"><img src="<%= @user.reward_field(field) %>"></div>
+              <% if @user.reward_field(field).present? %>
+                <div class="reward-image"><img src="<%= @user.reward_field(field) %>"></div>
+              <% end %>
             <% end %>
           <% end %>
         </div>
