--- a/app/views/admin/site_configs/index.html.erb
+++ b/app/views/admin/site_configs/index.html.erb
@@ -4,22 +4,20 @@
 <h1><%= t("admin.site_configs.settings") %></h1>
 <ul class="list-group">
   <% Setting.editable_keys.each do |key| %>
-  
     <% next if !Setting.captcha_enable? && key.in?(%w[use_recaptcha recaptcha_key recaptcha_secret]) %>
     <% next if !Setting.use_recaptcha? && key.in?(%w[recaptcha_key recaptcha_secret]) %>
-    
     <% if !Setting::SYSTEM_KEYS.include?(key) %>
-    <li class="list-group-item">
-      <div class="mb-1">
-        <%= icon_tag("cog") %><a href="<%= edit_admin_site_config_path(key) %>" class="ml-1"><%= key %></a>
-        <% if key == "timezone" %>
-          <div class="badge">
-            Current Timezone: <%= Time.zone %>
-          </div>
-        <% end %>
-      </div>
-      <div class="text-gray"><%= t("setting.#{key}") %></div>
-    </li>
+      <li class="list-group-item">
+        <div class="mb-1">
+          <%= icon_tag("cog") %><a href="<%= edit_admin_site_config_path(key) %>" class="ml-1"><%= key %></a>
+          <% if key == "timezone" %>
+            <div class="badge">
+              Current Timezone: <%= Time.zone %>
+            </div>
+          <% end %>
+        </div>
+        <div class="text-gray"><%= raw t("setting.#{key}") %></div>
+      </li>
     <% end %>
   <% end %>
 </ul>
